# student_journal

student-journal/: CMakeLists.txt  Discipline.cpp  Discipline.h  Group.cpp  Group.h  Journal.cpp  Journal.h  Lesson.cpp  Lesson.h  Person.cpp  Person.h  Student.cpp  Student.h  Teacher.cpp  Teacher.h  main.cpp
